--- a/final/templates/extdip.html
+++ b/final/templates/extdip.html
@@ -83,6 +83,151 @@
                         </select>
                     </td>
                 </tr>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit5">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade5">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit6">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade6">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit7">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade7">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit8">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade8">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit9">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade9">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit10">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade10">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit11">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade11">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit12">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade12">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="units", class="form-control all_units", id="unit13">
+                    {% for unit in all_units %}
+                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select name="units", class="form-control", id="grade13">
+                    <option value="D">Distinction</option>
+                    <option value="M">Merit</option>
+                    <option value="P">Pass</option>
+                    </select>
+                </td>
+            </tr>
         </tbody>
     </table>
     <div>
@@ -111,10 +256,28 @@
                 grade1: $('#grade1').val(),
                 unit2: $('#unit2').val(),
                 grade2: $('#grade2').val(),
-                unit2: $('#unit3').val(),
-                grade2: $('#grade3').val(),
-                unit2: $('#unit4').val(),
-                grade2: $('#grade4').val(),
+                unit3: $('#unit3').val(),
+                grade3: $('#grade3').val(),
+                unit4: $('#unit4').val(),
+                grade4: $('#grade4').val(),
+                unit5: $('#unit5').val(),
+                grade5: $('#grade5').val(),
+                unit6: $('#unit6').val(),
+                grade6: $('#grade6').val(),
+                unit7: $('#unit7').val(),
+                grade7: $('#grade7').val(),
+                unit8: $('#unit8').val(),
+                grade8: $('#grade8').val(),
+                unit9: $('#unit9').val(),
+                grade9: $('#grade9').val(),
+                unit10: $('#unit10').val(),
+                grade10: $('#grade10').val(),
+                unit11: $('#unit11').val(),
+                grade11: $('#grade11').val(),
+                unit12: $('#unit12').val(),
+                grade12: $('#grade12').val(),
+                unit13: $('#unit13').val(),
+                grade13: $('#grade13').val(),
             })
         return false;
 
