--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -21,7 +21,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <h2>BTEC Grade Calculator</h2>
+                <h2><a href="/index">BTEC Grade Calculator</a></h2>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
