ddd, Oct 10/26/2022, YYYY, 11:58 A +0

--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -115,7 +115,7 @@
                 grade3: $('#grade3').val(),
                 unit4: $('#unit4').val(),
                 grade4: $('#grade4').val(),
-            })
+            }).success(function(data) {})
           return false;
 
         });
