--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -87,7 +87,7 @@
         </tbody>
     </table>
     <div>
-        <button type="button" id="process_input">Submit</button>
+        <button type="button" id="calculate_grade">Submit</button>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -105,7 +105,7 @@
         });
         $('#process_input').bind('click', function() {
 
-            $.getJSON('/_process_data', {
+            $.getJSON('/_calculate_extcert_grade', {
                 selected_course: $('#all_courses').val(),
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
@@ -115,7 +115,7 @@
                 grade3: $('#grade3').val(),
                 unit4: $('#unit4').val(),
                 grade4: $('#grade4').val(),
-            }).success(function(data) {})
+            })
           return false;
 
         });
