--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -87,7 +87,7 @@
         </tbody>
     </table>
     <div>
-        <button type="button" id="calculate_grade">Submit</button>
+        <button type="button" id="calculate_grade">Calculate</button>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -103,7 +103,7 @@
                 $('.all_units').html(data.html_string_selected);
            })
         });
-        $('#process_input').bind('click', function() {
+        $('#calculate_grade').bind('click', function() {
 
             $.getJSON('/_calculate_extcert_grade', {
                 selected_course: $('#all_courses').val(),
