ddd, Oct 10/27/2022, YYYY, 12:04 A +0

--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -115,6 +115,8 @@
                 grade3: $('#grade3').val(),
                 unit4: $('#unit4').val(),
                 grade4: $('#grade4').val(),
+            }).success(function(data) {
+                $('#processed_results').text(data.random_text);
             })
           return false;
 
