ddd, Oct 10/27/2022, YYYY, 12:12 A +0

--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -90,7 +90,7 @@
         <button type="button" id="calculate_grade">Calculate</button>
     </div>
     <div id="calculated_grade">
-        Here we display some output based on the selection
+        Your estimated grade will be displayed here
       </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
