--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -33,6 +33,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -49,6 +51,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -65,6 +69,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -81,6 +87,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -97,6 +105,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -113,6 +123,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -129,6 +141,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
@@ -145,6 +159,8 @@
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
+                        <option value="N">Pass</option>
+                        <option value="U">Pass</option>
                         </select>
                     </td>
                 </tr>
