ddd, Oct 10/27/2022, YYYY, 9:00 A +0

--- a/final/v1/templates/extdip.html
+++ b/final/v1/templates/extdip.html
@@ -106,6 +106,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -122,6 +124,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -138,6 +142,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -154,6 +160,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -170,6 +178,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -186,6 +196,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -202,6 +214,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -218,6 +232,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
@@ -234,6 +250,8 @@
                     <option value="D">Distinction</option>
                     <option value="M">Merit</option>
                     <option value="P">Pass</option>
+                    <option value="N">Pass</option>
+                    <option value="U">Pass</option>
                     </select>
                 </td>
             </tr>
