--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -30,11 +30,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade1">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -48,11 +48,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade2">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -66,11 +66,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade3">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -84,11 +84,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade4">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -102,11 +102,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade5">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -120,11 +120,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade6">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -138,11 +138,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade7">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -156,11 +156,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade8">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -168,6 +168,9 @@
     </table>
     <div>
         <button type="button" id="process_input">Submit</button>
+    </div>
+    <div id="calculated_grade">
+        Your estimated grade will be displayed here
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -203,7 +206,8 @@
                 grade7: $('#grade7').val(),
                 unit8: $('#unit8').val(),
                 grade8: $('#grade8').val(),
-            })
+            }).success(function(data) {
+                $('#calculated_grade').text(data.random_text);
         return false;
 
         });
