--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -30,11 +30,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade1">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -48,11 +48,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade2">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -66,11 +66,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade3">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -84,11 +84,11 @@
                     </td>
                     <td>
                         <select name="units", class="form-control", id="grade4">
-                        <option value="D">Distinction</option>
-                        <option value="M">Merit</option>
-                        <option value="P">Pass</option>
-                        <option value="N">Pass</option>
-                        <option value="U">Pass</option>
+                            <option value="D">Distinction</option>
+                            <option value="M">Merit</option>
+                            <option value="P">Pass</option>
+                            <option value="N">Near Pass</option>
+                            <option value="U">Unclassified</option>
                         </select>
                     </td>
                 </tr>
@@ -99,7 +99,7 @@
     </div>
     <div id="calculated_grade">
         Your estimated grade will be displayed here
-      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript">
