--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -167,11 +167,12 @@
         </tbody>
     </table>
     <div>
-        <button type="button" id="process_input">Submit</button>
+        <button type="button" id="calculate_grade">Submit</button>
     </div>
     <div id="calculated_grade">
         Your estimated grade will be displayed here
     </div>
+
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript">
@@ -186,9 +187,9 @@
                 $('.all_units').html(data.html_string_selected);
         })
         });
-        $('#process_input').bind('click', function() {
+        $('#calculate_grade').bind('click', function() {
 
-            $.getJSON('/_process_data', {
+            $.getJSON('/_calculate_dip_grade', {
                 selected_course: $('#all_courses').val(),
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
