--- a/final/v1/templates/extdip.html
+++ b/final/v1/templates/extdip.html
@@ -258,7 +258,10 @@
         </tbody>
     </table>
     <div>
-        <button type="button" id="process_input">Submit</button>
+        <button type="button" id="calculate_grade">Submit</button>
+    </div>
+    <div id="calculated_grade">
+        Your estimated grade will be displayed here
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -274,9 +277,9 @@
                 $('.all_units').html(data.html_string_selected);
         })
         });
-        $('#process_input').bind('click', function() {
+        $('#calculate_grade').bind('click', function() {
 
-            $.getJSON('/_process_data', {
+            $.getJSON('/_calculate_extdip_grade', {
                 selected_course: $('#all_courses').val(),
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
@@ -304,7 +307,8 @@
                 grade12: $('#grade12').val(),
                 unit13: $('#unit13').val(),
                 grade13: $('#grade13').val(),
-            })
+            }).success(function(data) {
+                $('#calculated_grade').text(data.random_text);
         return false;
 
         });
