ddd, Oct 10/27/2022, YYYY, 9:51 A +0

--- a/final/v1/templates/extdip.html
+++ b/final/v1/templates/extdip.html
@@ -308,7 +308,7 @@
                 unit13: $('#unit13').val(),
                 grade13: $('#grade13').val(),
             }).success(function(data) {
-                $('#calculated_grade').text(data.random_text);
+                $('#calculated_grade').text(data.grade_report);
         return false;
 
         });
