--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -208,7 +208,7 @@
                 unit8: $('#unit8').val(),
                 grade8: $('#grade8').val(),
             }).success(function(data) {
-                $('#calculated_grade').text(data.random_text);
+                $('#calculated_grade').text(data.grade_report);
         return false;
 
         });
