--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -127,7 +127,7 @@
                 unit4: $('#unit4').val(),
                 grade4: $('#grade4').val(),
             }).success(function(data) {
-                $('#calculated_grade').text(data.random_text);
+                $('#calculated_grade').text(data.grade_report);
             })
           return false;
 
