ddd, Oct 10/27/2022, YYYY, 10:30 A +0

--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -24,7 +24,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit1">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
