--- a/final/v1/templates/extcert.html
+++ b/final/v1/templates/extcert.html
@@ -24,7 +24,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit1">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -42,7 +42,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit2">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -60,7 +60,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit3">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -78,7 +78,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit4">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
