ddd, Oct 10/27/2022, YYYY, 10:35 A +0

--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -42,7 +42,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit2">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -60,7 +60,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit3">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -78,7 +78,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit4">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -96,7 +96,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit5">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -114,7 +114,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit6">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -132,7 +132,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit7">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -150,7 +150,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit8">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
