--- a/final/v1/templates/extdip.html
+++ b/final/v1/templates/extdip.html
@@ -24,7 +24,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit1">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -42,7 +42,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit2">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -60,7 +60,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit3">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -78,7 +78,7 @@
                     <td>
                         <select name="units", class="form-control all_units", id="unit4">
                         {% for unit in all_units %}
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value=""></option>
                         {% endfor %}
                         </select>
                     </td>
@@ -97,7 +97,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit5">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -115,7 +115,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit6">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -133,7 +133,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit7">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -151,7 +151,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit8">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -169,7 +169,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit9">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -187,7 +187,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit10">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -205,7 +205,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit11">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -223,7 +223,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit12">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
@@ -241,7 +241,7 @@
                 <td>
                     <select name="units", class="form-control all_units", id="unit13">
                     {% for unit in all_units %}
-                    <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                    <option value=""></option>
                     {% endfor %}
                     </select>
                 </td>
