--- a/final/v1/templates/dip.html
+++ b/final/v1/templates/dip.html
@@ -169,10 +169,9 @@
     <div>
         <button type="button" id="calculate_grade">Submit</button>
     </div>
-    <div id="calculated_grade">
+    <h3 id="calculated_grade">
         Your estimated grade will be displayed here
-    </div>
-
+    </h3>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript">
