ddd, Oct 10/27/2022, YYYY, 1:58 A +0

--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -34,7 +34,7 @@
             {% block main %}{% endblock %}
         </main>
         <footer class="mb-5 small text-center text-muted">
-            Operated by New College Bradford
+            A CS50 Project by Rizvan Ali
         </footer>
 
     </body>
